# Jibiki

./: Cargo.toml  README.md
.metals/: metals.lock.db  metals.mv.db
resources/: sample_sentences.tsv
resources/jmdict_english/: tag_bank_1.json  term_bank_1.json  term_bank_10.json  term_bank_11.json  term_bank_12.json  term_bank_13.json  term_bank_14.json  term_bank_15.json  term_bank_16.json  term_bank_17.json  term_bank_18.json  term_bank_19.json  term_bank_2.json  term_bank_20.json  term_bank_21.json  term_bank_22.json  term_bank_23.json  term_bank_24.json  term_bank_25.json  term_bank_26.json  term_bank_27.json  term_bank_28.json  term_bank_29.json  term_bank_3.json  term_bank_30.json  term_bank_31.json  term_bank_32.json  term_bank_4.json  term_bank_5.json  term_bank_6.json  term_bank_7.json  term_bank_8.json  term_bank_9.json
resources/jmnedict/: term_bank_1.json  term_bank_10.json  term_bank_11.json  term_bank_12.json  term_bank_13.json  term_bank_14.json  term_bank_15.json  term_bank_16.json  term_bank_17.json  term_bank_18.json  term_bank_19.json  term_bank_2.json  term_bank_20.json  term_bank_21.json  term_bank_22.json  term_bank_23.json  term_bank_24.json  (+58 more)
src/: adjective_conjugation_utils.rs  basic_dictionaries.rs  build_dictionaries.rs  composite_dictionaries.rs  conjugation_utils.rs  dict_paths.rs  dictionary_paths.rs  innocent_dictionary.rs  jmdict_dictionary.rs  kana_utils.rs  kanji_dictionaries.rs  load_dictionaries.rs  main.rs  parse_example_sentences.rs  query.rs  radical_dictionaries.rs  sentence.rs  tag.rs  test.rs  verb_conjugation_utils.rs
(+2 files in other folders)
