[package]
name = "jibiki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
bincode = "1.3.3"
csv = "1.3.0"
itertools = "0.13.0"
lazy_static = "1.4.0"
rayon = "1.8.0"
regex = "1.10.2"
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"
structopt = "0.3.26"
